testsuite/tests/module/mod89.hs
-- !!! Sublist for non-class/tycon
module M where
import Prelude(map(..))

